namespace Application.Schemas.Models.CreateSchema;

public sealed record CreateSchemaRequest(string Name, string JsonSchema);

