namespace Application.Schemas.Models.CreateSchema;

public sealed record CreateSchemaResponse(int Id);

